feat: added .csv file import for all parameters and refactored test and modified calculator function to include file path